--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Projekt</title>
-    <script src="app.js"></script>
+    <title>Projekt strony internetowej</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -13,8 +12,7 @@
     />
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <!-- <body oncontextmenu="return false"> -->
-  <body>
+  <body oncontextmenu="return false">
     <div class="header">
       <div class="logo">LOGO</div>
     </div>
