--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body oncontextmenu="return false">
     <div class="header">
-      <div class="logo">LOGO</div>
+      <div class="logo"><a href="#">adress.com</a></div>
     </div>
 
     <div class="services">
